--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.1",
     "@react-three/fiber": "^8.17.10",
+    "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.16.0",
+    "dotted-map": "^2.2.3",
+    "framer-motion": "^11.18.1",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simplex-noise": "^4.0.3",
